DR-2937 Refactor azure storage (#1426)